--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Gorge Rodriguez"
+date: "Summer 2022"
 output: html_document
 ---
 
@@ -14,7 +14,14 @@ Our project will be done using several commits to the master branch.
 you, if you change any of this the git program will notice it and compromise your git merging strategy !-->
 
 ## First Verse 
-<!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+I painted her a gushing thing,  
+With years about a score;  
+I little thought to find they were  
+A least a dozen more;  
+My fancy gave her eyes of blue,  
+A curly auburn head:  
+I came to find the blue a green,  
+The auburn turned to red.  
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
