--- a/poem.rmd
+++ b/poem.rmd
@@ -24,7 +24,11 @@ I came to find the blue a green,
 The auburn turned to red.  
 
 ## Second Verse
-<!--Put the first five lines of a poem by Robert Frost here!-->
+There sandy seems the golden sky  
+And golden seems the sandy plain.  
+No habitation meets the eye  
+Unless in the horizon rim,  
+Some halfway up the limestone wall  
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
